<resources>
    <string name="app_name">Lab 7</string>
    <string name="email_text">Enter your email address:</string>
    <string name="email_hint">Type email here</string>
    <string name="pwd_text">Type your password:</string>
    <string name="login_button">Login</string>

    <string name="app_name2">ProfileActivity</string>
    <string name="profile_header">Your profile</string>
    <string name="name_text">Your name:</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_text_profile">Your email:</string>
    <string name="email_hint_profile">Enter your email</string>
    <string name="picture_text">Your picture:</string>
    <string name="pic_directions">Click the button above to take a picture</string>

    <string name="goToChat_String">Go to chat</string>
    <string name="send_Button">Send</string>
    <string name="receive_Button">Receive</string>
    <string name="chat_Hint">Type here</string>

    <string name="goToWeather_String">Weather Forecast</string>
    <string name="currentTemp_label">Current Temperature:</string>
    <string name="minTemp_label">Minimum Temperature:</string>
    <string name="maxTemp_label">Maximum Temperature:</string>
    <string name="uvRating_label">UV Rating:</string>

    <!-- Lab 7 -->
    <string name ="frag_title">Message Here</string>
    <string name="frag_title2">ID=</string>
    <string name="checkboxSend">Is a Send Message</string>
    <string name="fragButton">HIDE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>