<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp">

    <TextView
        android:id="@+id/profileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_header"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_text" />

    <EditText
        android:id="@+id/nameHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/name_hint"
        android:nextFocusDown="@id/emailEditText"
        android:nextFocusUp="@id/goToWeather_Button"
        android:nextFocusLeft="@id/goToWeather_Button"
        android:nextFocusRight="@id/emailEditText"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_text_profile" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/email_hint"
        android:nextFocusDown="@id/cameraButton"
        android:nextFocusUp="@id/nameHint"
        android:nextFocusLeft="@id/nameHint"
        android:nextFocusRight="@id/cameraButton"/>

    <TextView
        android:id="@+id/pictureText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture_text" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:nextFocusDown="@id/goToChat_button"
        android:nextFocusUp="@id/emailEditText"
        android:nextFocusLeft="@id/emailEditText"
        android:nextFocusRight="@id/goToChat_button"/>

    <TextView
        android:id="@+id/picDirections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pic_directions"/>

    <Button
        android:id="@+id/goToChat_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToChat_String"
        android:nextFocusDown="@id/goToWeather_Button"
        android:nextFocusUp="@id/cameraButton"
        android:nextFocusLeft="@id/cameraButton"
        android:nextFocusRight="@id/goToWeather_Button"/>

    <Button
        android:id="@+id/goToWeather_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToWeather_String"
        android:nextFocusDown="@id/nameHint"
        android:nextFocusUp="@id/goToChat_button"
        android:nextFocusLeft="@id/goToChat_button"
        android:nextFocusRight="@id/nameHint"/>

</LinearLayout>