<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    >


    <ListView
        android:id="@+id/messageList"
        android:layout_width="385dp"
        android:layout_height="460dp"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sendbutton"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/send_Button"
            android:layout_weight="1"
            android:gravity="fill"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/chat_Hint"
            android:inputType="text"
            android:layout_weight="1"
            android:gravity="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/button2" />

        <Button
            android:id="@+id/receivebutton"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/receive_Button"
            android:layout_weight="1"
            android:gravity="fill"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</LinearLayout>






